# Phi-Recorder

./: .gitignore  AGENTS.md  README.md  changelog.md  package.json  pnpm-lock.yaml  tsconfig.app.json
.github/workflows/: debug.yaml  release.yaml  test.yaml
src/: AboutView.vue  App.vue  BatchView.vue  RPEView.vue  RenderView.vue  RenderView1.vue  SettingsView.vue  TasksView.vue  common.ts  main.ts  model.ts  theme.ts
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/respack/: info.yml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/locales/en-US/: render.ftl
src-tauri/locales/zh-CN/: render.ftl
src-tauri/src/: common.rs  icon.rs  ipc.rs  lib.rs  main.rs  preview.rs  render.rs  task.rs
src/assets/: main.css
src/components/: ConfigView.vue  TipCombobox.vue  TipSlider.vue  TipSwitch.vue  TooltipIcon.vue
src/locales/en/: about.json  app.json  batch.json  config.json  main.json  render.json  rpe.json  setting.json  task.json
src/locales/zh-CN/: about.json  app.json  batch.json  config.json  main.json  render.json  rpe.json  setting.json  task.json
src/router/: index.ts
