[package]
name = "phi-recorder"
version = "1.2.0"
description = "Phi Recorder"
authors = ["HLMC", "Mivik"]
license = ""
repository = ""
default-run = "phi-recorder"
edition = "2021"
rust-version = "1.60"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# env_logger = "0.11.6"
serde_json = "1.0.138"
toml = "0.7.3"
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }

anyhow = { version = "1.0.95", features = ["backtrace"] }
macroquad = { git = "https://github.com/2278535805/prpr-macroquad", default-features = false }
prpr = { git = "https://github.com/2278535805/render-lib", package = "prpr", branch = "render-lib" }
# prpr = { path = "../../render-lib/prpr" }

sasa = { git = "https://github.com/2278535805/sasa" }
tokio = { version = "1.43.0", features = ["process", "rt-multi-thread", "fs"] }
tracing = "0.1.37"
tempfile = "3.16.0"
chrono = "0.4.28"
open = "5.3.2"
fs4 = { version = "0.6.6", features = ["tokio-async"] }
winapi = {version = "0.3", features = ["wincon", "winuser"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
regex = "1.9.6"
tauri-plugin-cli = "2.0.0-alpha.2"
tauri-plugin-dialog = "2"
zip = "0.6.6"
serde_yaml = "0.9.21"
# sysinfo = "0.29.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "thin"
strip = true
opt-level = 3
# debug = 1

[profile.dev.package."*"]
opt-level = 2
